@@ -1,0 +1,2 @@
+FAILED: Parse Error: line 0:-1 cannot recognize input '<EOF>' in column type
+
