@@ -1,0 +1,4 @@
+PREHOOK: query: alter table src change key key2 string after key_value
+PREHOOK: type: ALTERTABLE_RENAMECOL
+Column 'key_value' does not exist
+FAILED: Execution Error, return code 1 from org.apache.hadoop.hive.ql.exec.DDLTask
